syntax = "proto3";

package app.servicegrpc;

option go_package = "app/generated/servicegrpc";

import "enumgrpc/quizz_service.proto";
import "sharedgrpc/id.proto";
import "sharedgrpc/empty.proto";

service QuizzService {
  rpc GetById(sharedgrpc.ID) returns (Quizz) {}
  rpc GetListByEntityId(sharedgrpc.ID) returns (GetListByEntityIdResponse) {}
  rpc CreateQuizz(CreateQuizzRequest) returns (sharedgrpc.ID) {}
  rpc UpdateQuizz(UpdateQuizzRequest) returns (sharedgrpc.Empty) {}
  rpc DeleteById(sharedgrpc.ID) returns (sharedgrpc.Empty) {}
}

message Quizz {
  uint64 id = 1;
  string ask = 2;
  int32 time = 3;
  repeated string result = 4;
  repeated string option = 5;
  enumgrpc.EntityType entityType = 6;
  uint64 entityId = 7;

  uint64 createdAt = 8;
  uint32 updatedAt = 9;
  uint64 deletedAt = 10;
}

message CreateQuizzRequest {
  Quizz quizz = 1;
}

message UpdateQuizzRequest {
  uint64 id = 1;
  Quizz quizz = 2;
}

message GetListByEntityIdResponse {
  repeated Quizz quizzs = 1;
  int64 total = 2;
}